2002-05-30  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/ExternalUserAgent.pm (request): Added single quotes
	around %U when it is appended to the command.
	* show_comics: Made it use Netcomics::Config to process the system
	& user rc files.
	* doc/Modify_Webpage_Creation-HOWTO.html, *Comic_Module-HOWTO.html:
	updated author to be Netcomics Maintainers.

2002-05-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%files data): removed potd/astronomy from the
	%doc list.

2002-05-29  Sven Hartge  <netcomics@ds9.argh.org>

        * MANIFEST, Makefile.PL, lib/astronomy: Since no one objected:
        Moving astronomy back into lib

2002-05-26  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/penny_arcade: closed Bug# 550505, module fixed

2002-05-24  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/keenspot: expanded exists-lists for wendy, simplified the
        return-undef expression, changed cutewendy to exists-list based
        approach. Updated wendy release cycle
        * Makefile.PL, lib/bf, MANIFEST: added module for German
        Userfriendly (Benutzerfreundlich)

2002-05-24  Elliot Glaysher  <glaysher@umich.edu>

	* lib/helen: Fix by sizer. (see ML for more info on this!)
	* lib/comicspage: Fixed by sizer

2002-04-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/animation_express (ae): Added support for mini, animated gifs.

2002-04-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/Comic_Module-HOWTO.html: Added a description of the new
	volatile field.
	* Netcomics/Config.pm.in: Made same change as in netcomicsrc
	* netcomicsrc: Made the webpage_index_title not copy in the
	webpage_title so that it can change when -wt is used on the
	commandline.
	* Netcomics/Factory.pm (get_comics): Fixed bug where .rli file not
	updated to increment the number of tries when func field is dummy
	and not regetting the rli from the module if reloaded, not being