@@ -68,7 +68,10 @@ my $HOME = $ENV{'HOME'};
 ## External command to use to download URLs if you don't have LWP installed
 ## Case insensitive: %U replaced with the URL; %R referrer address; %P proxy
 ## When no %P is in this string and a proxy is specified, the command will
-## be prepended with "env http_proxy=<proxy> "
+## be prepended with "env http_proxy=<proxy> " if $proxy_url is defined.
+## If you include '%U', be sure to surround it by single quotes to prevent
+## the shell from interpretting any special characters that may be in the
+## URL like ampersand (&).
 #$external_cmd = 'wget -q -O - --header="Referer: %R"';
 
 ## Don't actually download the comics, but print the URLs on stdout, and
@@ -145,8 +148,9 @@ my $HOME = $ENV{'HOME'};
 ## Create an index for the webpages. Default is 1 (on)
 #$webpage_index = 0;
 
-## Title of the index page. Below is the default
-#$webpage_index_title = "Index for $webpage_title";
+## Title of the index page. %s is replaced with the webpage title.
+## Below is the default.
+#$webpage_index_title = "Index for %s";
 
 ## HTML <BODY> attribute for the color of the unvisited links in the title page
 #$index_link_color = "";
